adicionando informações sobre o curso

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<title>Come to ADS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		
 	</head>
 	<body id="top">
 
@@ -34,7 +34,11 @@
 				<!-- CAIXA DE TEXTO -->
 					<section id="three">
 						<h2>*</h2>
-						<p>*.</p>
+						<p>Turno: Integral<br/>
+						Modalidade: Presencial<br/>
+						Conceito do Curso (CC):	4<br/>
+						Enade: 4<br/>
+						</p>
 						
 							<div class="4u$ 12u$(small)">
 								<ul class="labeled-icons">
