Adicionando perfil do egresso e matriz curricular

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 					<section id="one">
 						<header class="major">
 							<h2>Come to ADS<br />
-							Conheça mais Sobre o Curso.</h2>
+							Conheça o Curso.</h2>
 						</header>
-						<p>*</p>
+						<p><h3>Análise e Desenvolvimento de Sistemas</h3>
+								IFPB - Campus Cajazeiras
+								</p>
 						
 					</section>
 
@@ -33,11 +35,18 @@
 
 				<!-- CAIXA DE TEXTO -->
 					<section id="three">
-						<h2>*</h2>
+						<h4><i>PERFIL DO EGRESSO :</i> O tecnólogo egresso deve ter condições de assumir um papel de agente transformador do mercado, sendo capaz de analisar as linguagens de computador e os códigos de comunicação entre o usuário e a máquina, podendo empreender ou assumir chefia ou a organização de Centro de Processamento de Dados (CPD) e, também, trabalhar em tarefas específicas, como documentação de sistemas e elaboração de manuais, tendo como desafio provocar mudanças através da agregação de novas tecnologias na solução dos problemas e propiciando novos tipos de atividades, agregando:<br>
+
+						Domínio de novas ferramentas e implementação de sistemas visando melhores condições de trabalho e de vida;<br>
+						Conhecimento e emprego de modelos associados ao uso de ferramentas do estado-da-arte;<br>
+						Pesquisa visando novos conhecimentos e produtos;<br>
+						Uma visão humanística consistente e crítica do impacto de sua atuação profissional na sociedade.</i></h4>
 						<p>Turno: Integral<br/>
 						Modalidade: Presencial<br/>
 						Conceito do Curso (CC):	4<br/>
 						Enade: 4<br/>
+
+					<a href="https://estudante.ifpb.edu.br/media/cursos/12/documentos/Fluxograma_de_ADS_em_17-05-2017.pdf">Matriz Curricular</a>
 						</p>
 						
 							<div class="4u$ 12u$(small)">
