adicionando caixa de texto e botão

--- a/index.html
+++ b/index.html
@@ -48,6 +48,24 @@
 
 					<a href="https://estudante.ifpb.edu.br/media/cursos/12/documentos/Fluxograma_de_ADS_em_17-05-2017.pdf">Matriz Curricular</a>
 						</p>
+
+				<!-- caixa de texto -->
+					<div class="row">
+							<div class="8u 12u$(small)">
+								<form method="post" action="#">
+									<div class="row uniform 50%">
+										<div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Nome" /></div>
+										<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
+										<div class="12u$"><textarea name="message" id="message" placeholder="Mensagem" rows="4"></textarea></div>
+									</div>
+								</form>
+								<ul class="actions">
+									<li><input type="submit" value="Enviar" /></li>
+								</ul>
+							</div>
+
+
+
 						
 							<div class="4u$ 12u$(small)">
 								<ul class="labeled-icons">
