--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 						</p>
 
 				<!-- caixa de texto -->
+				
 					<div class="row">
 							<div class="8u 12u$(small)">
 								<form method="post" action="#">
@@ -64,9 +65,6 @@
 								</ul>
 							</div>
 
-
-
-						
 							<div class="4u$ 12u$(small)">
 								<ul class="labeled-icons">
 									<li>
@@ -82,7 +80,7 @@
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">diogo.moreira@ifpb.edu.br</a>
 									</li>
 								</ul>
 							</div>
