--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
 						</div>
 					</section>
 
+						<hr>
+					<!-- Cajazeiras -->
+						<section id="two">
+							<h2><i>Campus Cajazeiras</i></h2>
+							<div class="row">
+
 					
 
 				<!-- caixa de texto -->
