colocando div lateral, atualizando texto no titulo e adicionando informaçoes de contado na div lateral

--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
 
 		<!-- Header DIV lATERAL -->
 
-
+		<header id="header">
+				<div class="inner">
+					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<h1><strong>Come to ADS</strong>, se informe.<br />
+					Conheça tudo que precisa saber sobre: O curso, a cidade,<br />
+					e o <i>Campus Cajazeiras</i></a>.</h1>
+				</div>
+			</header>
 
 			
 		<!-- Main -->
@@ -22,8 +29,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Come to ADS<br />
-							Conheça o Curso.</h2>
+							<h2>Vem Pra ADS<br /></h2>
 						</header>
 						<p><h3>Análise e Desenvolvimento de Sistemas</h3>
 								IFPB - Campus Cajazeiras
@@ -136,13 +142,12 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="https://github.com/ads-ifpb-gcm" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="http://www.ifpb.edu.br/cajazeiras" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Titulado</li><li>Design: <a href="https://www.instagram.com/ra_coelh0/">Raul Coelho , <a href="https://www.instagram.com/romulo.pereira_/">Romulo Pereira </a></li>
 					</ul>
 				</div>
 			</footer>
@@ -152,7 +157,7 @@
 			<script src="assets/js/jquery.poptrox.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			
 			<script src="assets/js/main.js"></script>
 
 	</body>
