adicionando oportunidades para o aluno

--- a/index.html
+++ b/index.html
@@ -92,7 +92,39 @@
 							   Em várias partes do município, é possível encontrar uma produção artesanal diferenciada, criada de acordo com a cultura e o modo de vida local e feita com matérias-primas como as tapeçarias, as rendas e o vidro. A vista do Cristo Redentor, no morro de mesmo nome, é um importante atrativo turístico. Cajazeiras possui outros diversos atrativos turísticos, como a Biblioteca Pública Municipal Doutor Castro Pinto, a antiga Estação Ferroviária, a Igreja Matriz de Nossa Senhora de Fátima e a Igreja de São João Bosco e principalmente o lindo por do sol na praça leblon. 
 							</p>
 
-							<div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126742.47480651556!2d-38.58979334318965!3d-6.926139875202088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7a472d082d8edb7%3A0x1c5023bf5f28ade8!2sCajazeiras%2C+PB%2C+58900-000!5e0!3m2!1spt-BR!2sbr!4v1507055088408" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+						<div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126742.47480651556!2d-38.58979334318965!3d-6.926139875202088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7a472d082d8edb7%3A0x1c5023bf5f28ade8!2sCajazeiras%2C+PB%2C+58900-000!5e0!3m2!1spt-BR!2sbr!4v1507055088408" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+
+						<section id="two">
+							<h2><i>Oportunidades para o Aluno</i></h2>	
+							<div class="row">						
+							<article class="6u 12u$(xsmall) work-item">
+								<h3>Pesquisa e Extensão</h3>
+							</article>
+								<p>A Pesquisa e Extensão do IFPB Campus Cajazeiras, vem sendo realizada com o intuito de disseminar os conhecimentos construídos pelos pesquisadores e extensionistas (servidores e discentes) do campus, a partir do desenvolvimento dos seus projetos.  
+								O campus Cajazeiras apresenta para comunidade a Mostra de Pesquisa, Extensão e Inovação, trazendo, na sua nova versão: palestras, mesas redondas, oficinas, apresentações de banners e atividades culturais.</p><br>
+
+								<h3>Alunos egressos:</h3><br>
+								<p>Aluno: Amanda Drielly Pires Venceslau<br>
+								Trabalho: Univerisidade Federal do Ceará - Crateús<br>
+								Titulação: Mestre<br><br>
+					
+								Aluno: Saskya Thereza Alves Gurgel<br>
+								Trabalho: CAERN - Natal<br>
+								Titulação: Mestre<br><br>
+
+								Aluno: Sttiwe Washington Ferreira de Souza<br>
+								Trabalho: Cajazeiras<br>
+								Titulação: Mestre<br><br>
+
+								Aluno: Hidelberg Oliveira ALbuquerque<br>
+								Trabalho: Universidade Federal Rural de Pernambuco - Serra Talhada<br>
+								Titulação: Mestre<br><br>
+
+								Aluno: Reudismam Rolim de Sousa<br>
+								Trabalho: Faz doutorado na UFCG<br>
+								Titulação: Mestre<br><br>
+							</p>
+
 
 						</div>
 					</section>	
