--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 							Nos últimos anos, através dos cursos superiores de Tecnologia em Automação Industrial e Análise e Desenvolvimento de Sistemas, Licenciatura em Matemática e o Bacharelado em Engenharia Civil, a mão de obra qualificada formada pelo IFPB, no coração do sertão, tem garantido seu espaço em todo o Brasil e até fora dele.</p>
 							
 					<section id="two">
+						<hr>
 						<h2><i>Cajazeiras</i></h2>	
 						<div class="row">						
 							<article class="6u 12u$(xsmall) work-item">
@@ -92,9 +93,10 @@
 							   Em várias partes do município, é possível encontrar uma produção artesanal diferenciada, criada de acordo com a cultura e o modo de vida local e feita com matérias-primas como as tapeçarias, as rendas e o vidro. A vista do Cristo Redentor, no morro de mesmo nome, é um importante atrativo turístico. Cajazeiras possui outros diversos atrativos turísticos, como a Biblioteca Pública Municipal Doutor Castro Pinto, a antiga Estação Ferroviária, a Igreja Matriz de Nossa Senhora de Fátima e a Igreja de São João Bosco e principalmente o lindo por do sol na praça leblon. 
 							</p>
 
-						<div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126742.47480651556!2d-38.58979334318965!3d-6.926139875202088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7a472d082d8edb7%3A0x1c5023bf5f28ade8!2sCajazeiras%2C+PB%2C+58900-000!5e0!3m2!1spt-BR!2sbr!4v1507055088408" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+						<div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126742.47480651556!2d-38.58979334318965!3d-6.926139875202088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7a472d082d8edb7%3A0x1c5023bf5f28ade8!2sCajazeiras%2C+PB%2C+58900-000!5e0!3m2!1spt-BR!2sbr!4v1507055088408" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></div><br>
 
 						<section id="two">
+							 <hr>
 							<h2><i>Oportunidades para o Aluno</i></h2>	
 							<div class="row">						
 							<article class="6u 12u$(xsmall) work-item">
@@ -122,14 +124,11 @@
 
 								Aluno: Reudismam Rolim de Sousa<br>
 								Trabalho: Faz doutorado na UFCG<br>
-								Titulação: Mestre<br><br>
+								Titulação: Mestre<br>
 							</p>
-
-
 						</div>
-					</section>	
-
-					
+						<hr>
+					</section>		
 
 				<!-- caixa de texto -->
 
